# prompt-injection-interp

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  lint.sh  pyproject.toml  requirements.txt
data/: .gitignore  athletes.csv  facts.csv  words.csv
data/attention-stats/: counterfact-llama2_7b.txt
data/head-list/: counterfact-llama2_7b.txt
data/head-stats/: counterfact-llama2_13b.txt  counterfact-llama2_7b.txt
data/inference/: hqfact_inference_llama2_13b.csv  hqfact_inference_llama2_7b.csv
docker/: Dockerfile  dl_hf_models.py  start.sh
matplotlib-styles/: 1col.mplstyle  attrib.mplstyle
notebooks/: california_attack.ipynb  dla-per-head-v2.ipynb  dla-per-head.ipynb  dla-tony.ipynb  dla.ipynb  dontsay-l26h9-mi.ipynb  dpa.ipynb  enriched_list.pkl  llama2-has-no-biases.ipynb  london.ipynb  nonenriched_list.pkl  subnet-flow-proto-multi.ipynb  subnet-flow-proto-noise.ipynb  subnet-flow-proto.ipynb  subnet-flow-pythia.ipynb  tl_llama_bug.ipynb
notebooks/dontsay/: california_attack.ipynb  california_attacks.ipynb  df_ablation.ipynb  df_ablation_hf.ipynb  df_inference.ipynb  df_inference_hf.ipynb  df_inference_openai.ipynb  dontsay-l27h29.ipynb  dontsay-plots.ipynb  l27-h29-subnet-flow.ipynb  our_hq_facts.ipynb  ov-analysis.ipynb  terminal-node-importance.ipynb
notebooks/misc/: attribute-lens-x-enrichment.ipynb  llama-2-13b.ipynb  tl_llama_bug.ipynb
pii/: ablation.py  datasets.py  decomp.py  decomp_hf.py  openai_logit_extraction.py  prediction_trajectory.py  prompt_data.py  utils.py  vocab.py
tests/: test_openai_logit_extraction.py
(+11 files in other folders)
